--- a/teton/1.6/index.html
+++ b/teton/1.6/index.html
@@ -1,37 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <meta name="description" content="System Under Test for CSE 270 - BYU-Idaho" >
-    <title>Teton Idaho CoC</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" >
-    <link rel="stylesheet" href="./styles/base.css" >
-    <link rel="stylesheet" href="./styles/medium.css" >
-    <link rel="stylesheet" href="./styles/large.css" >    
-    <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <script src="./config/config.js" defer></script>
-    <script src="./scripts/header-footer.js" defer></script>    
-    <script src="./scripts/main.js" defer></script>
-  </head>
-  <body>
-    <div id="content">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="System Under Test for CSE 270 - BYU-Idaho - Savanna Whittaker">
+  <title>Teton Idaho CoC</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <link rel="stylesheet" href="./styles/base.css">
+  <link rel="stylesheet" href="./styles/medium.css">
+  <link rel="stylesheet" href="./styles/large.css">
+  <link rel="icon" type="image/x-icon" href="./favicon.ico">
+  <script src="./config/config.js" defer></script>
+  <script src="./scripts/header-footer.js" defer></script>
+  <script src="./scripts/main.js" defer></script>
+</head>
+
+<body>
+  <div id="content">
 
     <!-- This is a comment -->
     <header>
-      <div class="header-top">        
-          <div class="header-logo">
-            <a href="index.html"><img src="./images/teton-logo-150.webp" alt="Teton Chamber of Commerce Logo"></a>            
-          </div>          
-          <div class="header-title">
-            <h1>Teton Idaho</h1>
-            <h2>Chamber of Commerce</h2>
-          </div>
-          <div class="header-icons">
-            <a href="https://www.instagram.com" target="_blank"><img src="./images/instagram-40.png" alt="instagram logo"></a>
-            <a href="https://www.pinterest.com" target="_blank"><img src="./images/pinterest-40.png" alt="facebook logo"></a>
-          </div>
+      <div class="header-top">
+        <div class="header-logo">
+          <a href="index.html"><img src="./images/teton-logo-150.webp" alt="Teton Chamber of Commerce Logo"></a>
+        </div>
+        <div class="header-title">
+          <h1>Teton Idaho</h1>
+          <h2>Chamber of Commerce</h2>
+        </div>
+        <div class="header-icons">
+          <a href="https://www.instagram.com" target="_blank"><img src="./images/instagram-40.png"
+              alt="instagram logo"></a>
+          <a href="https://www.pinterest.com" target="_blank"><img src="./images/pinterest-40.png"
+              alt="facebook logo"></a>
+        </div>
       </div>
       <nav>
         <button id="hamburger-menu">
@@ -58,7 +62,8 @@
         <h1>Local Events</h1>
         <h3>Preparations for Town Parade</h3>
         <p class="centered-image"><img src="./images/parade.jpg" alt="A community parade"></p>
-        <p>Preparations are well underway for the community parade. Parades are an important part of the community spirit and 
+        <p>Preparations are well underway for the community parade. Parades are an important part of the community
+          spirit and
           celebrates the pride of our small community. Join us in celebrating our shared heritage!
         </p>
         <p>
@@ -68,15 +73,15 @@
       <section class="main-weather">
         <h2>Weather</h2>
         <div>
-            <img id="weathericon" src="./images/sunny.png" alt="weather icon">
-            <h2><span id="temperature">?</span>&deg; F</h2>
+          <img id="weathericon" src="./images/sunny.png" alt="weather icon">
+          <h2><span id="temperature">?</span>&deg; F</h2>
         </div>
         <h2 id="weatherdesc">?</h2>
         <hr>
         <h3>Wind Speed: <span id="windspeed">?</span> mph</h3>
-    </section> 
+      </section>
       <section class="main-news">
-        
+
         <h3>Race to the Moon at Teton Elementary</h3>
         <p class="centered-image"><img src="./images/teton-elementary-ice-320.jpg"
             alt="Teton Elementary school children playing"></p>
@@ -113,10 +118,12 @@
           <p>208-458-4444</p>
         </div>
         <div class="footer-map">
-          <p><a href="https://maps.app.goo.gl/qLA7Sjpp6FN63ULG9" target="_blank"><img src="./images/google-maps.png" alt="Google map icon"></a></p>
+          <p><a href="https://maps.app.goo.gl/qLA7Sjpp6FN63ULG9" target="_blank"><img src="./images/google-maps.png"
+                alt="Google map icon"></a></p>
         </div>
       </div>
     </footer>
-    </div>
-  </body>
+  </div>
+</body>
+
 </html>
